fix up to alignment for readiblity

--- a/src/scss/components/local-footer/_local-footer.scss
+++ b/src/scss/components/local-footer/_local-footer.scss
@@ -2,7 +2,13 @@
 
 .su-local-footer  {
   color: $su-color-white;
-  background-image:linear-gradient(327deg, #10a29b 0%, rgba(12, 161, 113, 0.8) 8.2%, rgba(89, 154, 8, 0.6) 16.4%, rgba(144, 137, 5, 0.4) 24.6%, rgba(255, 0, 0, 0) 41%), linear-gradient(19deg, #3a2a78 0%, rgba(94, 45, 123, 0.8) 20%, rgba(124, 47, 129, 0.6) 40%, rgba(153, 49, 133, 0.4) 60%, rgba(217, 46, 116, 0) 100%), radial-gradient(50% 50% at 50% 97%, #55777f 17%, rgba(82, 118, 174, 0.75) 37.75%, rgba(175, 75, 213, 0.5) 58.5%, rgba(255, 0, 0, 0) 100%), linear-gradient(50deg, rgba(167, 96, 66, 0) 32%, rgba(167, 96, 66, 0.25) 44.5%, rgba(167, 96, 66, 0.5) 57%, #a76042 82%), radial-gradient(37.5% 37.5% at 49% 27%, #ab2033 36%, rgba(191, 30, 50, 0.75) 52%, rgba(212, 26, 45, 0.5) 68%, rgba(255, 0, 0, 0) 100%), linear-gradient(134deg, #8e2049 25%, rgba(157, 32, 75, 0.86) 35.71%, rgba(172, 32, 76, 0.71) 46.43%, rgba(187, 30, 75, 0.57) 57.14%, rgba(204, 27, 72, 0.43) 67.86%, rgba(220, 23, 64, 0.29) 78.57%, rgba(255, 0, 0, 0) 100%);
+  background-image:
+    linear-gradient(327deg, #10a29b 0%, rgba(12, 161, 113, 0.8) 8.2%, rgba(89, 154, 8, 0.6) 16.4%, rgba(144, 137, 5, 0.4) 24.6%, rgba(255, 0, 0, 0) 41%),
+    linear-gradient(19deg, #3a2a78 0%, rgba(94, 45, 123, 0.8) 20%, rgba(124, 47, 129, 0.6) 40%, rgba(153, 49, 133, 0.4) 60%, rgba(217, 46, 116, 0) 100%),
+    radial-gradient(50% 50% at 50% 97%, #55777f 17%, rgba(82, 118, 174, 0.75) 37.75%, rgba(175, 75, 213, 0.5) 58.5%, rgba(255, 0, 0, 0) 100%),
+    linear-gradient(50deg, rgba(167, 96, 66, 0) 32%, rgba(167, 96, 66, 0.25) 44.5%, rgba(167, 96, 66, 0.5) 57%, #a76042 82%),
+    radial-gradient(37.5% 37.5% at 49% 27%, #ab2033 36%, rgba(191, 30, 50, 0.75) 52%, rgba(212, 26, 45, 0.5) 68%, rgba(255, 0, 0, 0) 100%),
+    linear-gradient(134deg, #8e2049 25%, rgba(157, 32, 75, 0.86) 35.71%, rgba(172, 32, 76, 0.71) 46.43%, rgba(187, 30, 75, 0.57) 57.14%, rgba(204, 27, 72, 0.43) 67.86%, rgba(220, 23, 64, 0.29) 78.57%, rgba(255, 0, 0, 0) 100%);
   background-color: $su-color-black;
 
   .su-lockup__wordmark {
